<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Historia">
    <item android:id="@+id/action_delete"
        android:title="@string/Eliminar_Recorrido"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_clear"
        android:orderInCategory="40"
        android:title="@string/Limpiar"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:orderInCategory="50"
        android:title="@string/Eliminar_Todos_Recorridos"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order_1"
        android:orderInCategory="60"
        android:title="@string/Ordenar_Fecha"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_order_2"
        android:orderInCategory="70"
        android:title="@string/Ordenar_Actividad"
        app:showAsAction="never" />
</menu>
